--- a/drcp-frontend/src/app/components/forms/forget-password/forget-password.scss
+++ b/drcp-frontend/src/app/components/forms/forget-password/forget-password.scss
@@ -265,3 +265,17 @@
     }
 
 }
+
+@media screen and (width<768px) {
+    // mobile
+    .forget-password-form-details, .code-verification-form-details, .reset-password-form-details{
+        padding: 20px 60px;
+        .inputs{
+            div{
+                input{
+                    padding: 5px;
+                }
+            }
+        }
+    }
+}
