--- a/drcp-frontend/src/app/components/resources/resources.html
+++ b/drcp-frontend/src/app/components/resources/resources.html
@@ -408,9 +408,9 @@
       <button>Lat: {{ startingPointCoordinates[0] }}</button>
       <button>Long: {{ startingPointCoordinates[1] }}</button>
     </div>
-    <div style="color: orangered">
+    <!-- <div style="color: orangered">
       <span style="color: blue">----------------------------</span><mat-icon>location_on</mat-icon><span style="color: orangered">----------------------------</span>
-    </div>
+    </div> -->
     <div class="right">
       <span >Destination (Disaster)</span>
       <button>Lat: {{ destinationPointCoordinates[0] }}</button>
